Full notebook example draft

--- a/examples/ctc.ipynb
+++ b/examples/ctc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,16 +13,18 @@
     "\n",
     "from tqdm import tqdm\n",
     "\n",
-    "from cell_tracking_metrics.loaders.ctc import load_ctc_data"
+    "from traccuracy import run_metrics\n",
+    "from traccuracy.loaders.ctc import load_ctc_data\n",
+    "from traccuracy.matchers import CTCMatched\n",
+    "from traccuracy.metrics import CTCMetrics, DivisionMetrics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add a utility to make a progress bar when downloading the file\n",
     "url = \"http://data.celltrackingchallenge.net/training-datasets/Fluo-N2DL-HeLa.zip\"\n",
     "data_dir = 'downloads'\n",
     "\n",
@@ -55,6 +57,7 @@
     }
    ],
    "source": [
+    "# Add a utility to make a progress bar when downloading the file\n",
     "class DownloadProgressBar(tqdm):\n",
     "    def update_to(self, b=1, bsize=1, tsize=None):\n",
     "        if tsize is not None:\n",
@@ -75,9 +78,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading TIFFs: 100%|██████████| 92/92 [00:00<00:00, 385.33it/s]\n",
+      "Loading TIFFs: 100%|██████████| 92/92 [00:00<00:00, 709.70it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "gt_data = load_ctc_data('downloads/Fluo-N2DL-HeLa/01_GT/TRA', 'man_track.txt')\n",
@@ -86,10 +98,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Matching frames: 100%|██████████| 92/92 [00:13<00:00,  7.05it/s]\n",
+      "Evaluating nodes: 100%|██████████| 92/92 [00:00<00:00, 13702.50it/s]\n",
+      "Evaluating edges: 100%|██████████| 8535/8535 [00:06<00:00, 1406.70it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = run_metrics(\n",
+    "    gt_data=gt_data, \n",
+    "    pred_data=pred_data, \n",
+    "    matcher=CTCMatched, \n",
+    "    metrics=[CTCMetrics, DivisionMetrics], \n",
+    "    frame_buffer=(0,1,2)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'AOGM': 631.5,\n",
+       " 'fp_nodes': 0,\n",
+       " 'fn_nodes': 39,\n",
+       " 'ns_nodes': 0,\n",
+       " 'fp_edges': 60,\n",
+       " 'fn_edges': 87,\n",
+       " 'ws_edges': 51,\n",
+       " 'TRA': 0.9936361895740329,\n",
+       " 'DET': 0.9954855886097927}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results['CTCMetrics'].results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Frame Buffer 0': {'Division Recall': 0.8085106382978723,\n",
+       "  'Division Precision': 0.7169811320754716,\n",
+       "  'Division F1': 0.76,\n",
+       "  'Mitotic Branching Correctness': 0.6129032258064516,\n",
+       "  'Total GT Divisions': 94,\n",
+       "  'True Positive Divisions': 76,\n",
+       "  'False Positive Divisions': 30,\n",
+       "  'False Negative Divisions': 18},\n",
+       " 'Frame Buffer 1': {'Division Recall': 0.8085106382978723,\n",
+       "  'Division Precision': 0.7169811320754716,\n",
+       "  'Division F1': 0.76,\n",
+       "  'Mitotic Branching Correctness': 0.6129032258064516,\n",
+       "  'Total GT Divisions': 94,\n",
+       "  'True Positive Divisions': 76,\n",
+       "  'False Positive Divisions': 30,\n",
+       "  'False Negative Divisions': 18},\n",
+       " 'Frame Buffer 2': {'Division Recall': 0.8085106382978723,\n",
+       "  'Division Precision': 0.7169811320754716,\n",
+       "  'Division F1': 0.76,\n",
+       "  'Mitotic Branching Correctness': 0.6129032258064516,\n",
+       "  'Total GT Divisions': 94,\n",
+       "  'True Positive Divisions': 76,\n",
+       "  'False Positive Divisions': 30,\n",
+       "  'False Negative Divisions': 18}}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results['DivisionMetrics'].results"
+   ]
   }
  ],
  "metadata": {
