--- a/examples/ctc.ipynb
+++ b/examples/ctc.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "import os\n",
     "from pathlib import Path\n",
+    "import pprint\n",
     "import urllib.request\n",
     "import zipfile\n",
     "\n",
@@ -15,8 +16,10 @@
     "\n",
     "from traccuracy import run_metrics\n",
     "from traccuracy.loaders.ctc import load_ctc_data\n",
-    "from traccuracy.matchers import CTCMatched\n",
-    "from traccuracy.metrics import CTCMetrics, DivisionMetrics"
+    "from traccuracy.matchers import CTCMatched, IOUMatched\n",
+    "from traccuracy.metrics import CTCMetrics, DivisionMetrics\n",
+    "\n",
+    "pp = pprint.PrettyPrinter(indent=4)"
    ]
   },
   {
@@ -38,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +55,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fluo-N2DL-HeLa.zip: 191MB [00:10, 17.4MB/s]                              \n"
+      "Fluo-N2DL-HeLa.zip: 191MB [00:16, 11.4MB/s]                               \n"
      ]
     }
    ],
@@ -78,15 +81,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading TIFFs: 100%|██████████| 92/92 [00:00<00:00, 385.33it/s]\n",
-      "Loading TIFFs: 100%|██████████| 92/92 [00:00<00:00, 709.70it/s]\n"
+      "Loading TIFFs: 100%|██████████| 92/92 [00:00<00:00, 359.41it/s]\n",
+      "Loading TIFFs: 100%|██████████| 92/92 [00:00<00:00, 689.41it/s]\n"
      ]
     }
    ],
@@ -97,100 +100,146 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run CTC metrics with additional evaluation of division events."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matching frames: 100%|██████████| 92/92 [00:13<00:00,  7.05it/s]\n",
-      "Evaluating nodes: 100%|██████████| 92/92 [00:00<00:00, 13702.50it/s]\n",
-      "Evaluating edges: 100%|██████████| 8535/8535 [00:06<00:00, 1406.70it/s]\n"
+      "Matching frames: 100%|██████████| 92/92 [00:14<00:00,  6.33it/s]\n",
+      "Evaluating nodes: 100%|██████████| 92/92 [00:00<00:00, 9961.17it/s]\n",
+      "Evaluating edges: 100%|██████████| 8535/8535 [00:06<00:00, 1360.61it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{   'CTCMetrics': {   'AOGM': 631.5,\n",
+      "                      'DET': 0.9954855886097927,\n",
+      "                      'TRA': 0.9936361895740329,\n",
+      "                      'fn_edges': 87,\n",
+      "                      'fn_nodes': 39,\n",
+      "                      'fp_edges': 60,\n",
+      "                      'fp_nodes': 0,\n",
+      "                      'ns_nodes': 0,\n",
+      "                      'ws_edges': 51},\n",
+      "    'DivisionMetrics': {   'Frame Buffer 0': {   'Division F1': 0.76,\n",
+      "                                                 'Division Precision': 0.7169811320754716,\n",
+      "                                                 'Division Recall': 0.8085106382978723,\n",
+      "                                                 'False Negative Divisions': 18,\n",
+      "                                                 'False Positive Divisions': 30,\n",
+      "                                                 'Mitotic Branching Correctness': 0.6129032258064516,\n",
+      "                                                 'Total GT Divisions': 94,\n",
+      "                                                 'True Positive Divisions': 76},\n",
+      "                           'Frame Buffer 1': {   'Division F1': 0.76,\n",
+      "                                                 'Division Precision': 0.7169811320754716,\n",
+      "                                                 'Division Recall': 0.8085106382978723,\n",
+      "                                                 'False Negative Divisions': 18,\n",
+      "                                                 'False Positive Divisions': 30,\n",
+      "                                                 'Mitotic Branching Correctness': 0.6129032258064516,\n",
+      "                                                 'Total GT Divisions': 94,\n",
+      "                                                 'True Positive Divisions': 76},\n",
+      "                           'Frame Buffer 2': {   'Division F1': 0.76,\n",
+      "                                                 'Division Precision': 0.7169811320754716,\n",
+      "                                                 'Division Recall': 0.8085106382978723,\n",
+      "                                                 'False Negative Divisions': 18,\n",
+      "                                                 'False Positive Divisions': 30,\n",
+      "                                                 'Mitotic Branching Correctness': 0.6129032258064516,\n",
+      "                                                 'Total GT Divisions': 94,\n",
+      "                                                 'True Positive Divisions': 76}}}\n"
      ]
     }
    ],
    "source": [
-    "results = run_metrics(\n",
+    "ctc_results = run_metrics(\n",
     "    gt_data=gt_data, \n",
     "    pred_data=pred_data, \n",
     "    matcher=CTCMatched, \n",
-    "    metrics=[CTCMetrics, DivisionMetrics], \n",
-    "    frame_buffer=(0,1,2)\n",
-    ")"
+    "    metrics=[CTCMetrics, DivisionMetrics],\n",
+    "    metrics_kwargs=dict(\n",
+    "        frame_buffer=(0,1,2)\n",
+    "    )\n",
+    ")\n",
+    "pp.pprint(ctc_results)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use an IOU matcher which supports a minimum threshold for overlap and run division metrics."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'AOGM': 631.5,\n",
-       " 'fp_nodes': 0,\n",
-       " 'fn_nodes': 39,\n",
-       " 'ns_nodes': 0,\n",
-       " 'fp_edges': 60,\n",
-       " 'fn_edges': 87,\n",
-       " 'ws_edges': 51,\n",
-       " 'TRA': 0.9936361895740329,\n",
-       " 'DET': 0.9954855886097927}"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{   'DivisionMetrics': {   'Frame Buffer 0': {   'Division F1': 0,\n",
+      "                                                 'Division Precision': 0.0,\n",
+      "                                                 'Division Recall': 0.0,\n",
+      "                                                 'False Negative Divisions': 94,\n",
+      "                                                 'False Positive Divisions': 93,\n",
+      "                                                 'Mitotic Branching Correctness': 0.0,\n",
+      "                                                 'Total GT Divisions': 94,\n",
+      "                                                 'True Positive Divisions': 0},\n",
+      "                           'Frame Buffer 1': {   'Division F1': 0.44837758112094395,\n",
+      "                                                 'Division Precision': 0.44970414201183434,\n",
+      "                                                 'Division Recall': 0.4470588235294118,\n",
+      "                                                 'False Negative Divisions': 94,\n",
+      "                                                 'False Positive Divisions': 93,\n",
+      "                                                 'Mitotic Branching Correctness': 0.2889733840304182,\n",
+      "                                                 'Total GT Divisions': 94,\n",
+      "                                                 'True Positive Divisions': 76},\n",
+      "                           'Frame Buffer 2': {   'Division F1': 0.44837758112094395,\n",
+      "                                                 'Division Precision': 0.44970414201183434,\n",
+      "                                                 'Division Recall': 0.4470588235294118,\n",
+      "                                                 'False Negative Divisions': 94,\n",
+      "                                                 'False Positive Divisions': 93,\n",
+      "                                                 'Mitotic Branching Correctness': 0.2889733840304182,\n",
+      "                                                 'Total GT Divisions': 94,\n",
+      "                                                 'True Positive Divisions': 76}}}\n"
+     ]
     }
    ],
    "source": [
-    "results['CTCMetrics'].results"
+    "iou_results = run_metrics(\n",
+    "    gt_data=gt_data, \n",
+    "    pred_data=pred_data, \n",
+    "    matcher=IOUMatched, \n",
+    "    matcher_kwargs=dict(\n",
+    "        iou_threshold=0.5\n",
+    "    ),\n",
+    "    metrics=[DivisionMetrics], \n",
+    "    metrics_kwargs=dict(\n",
+    "        frame_buffer=(0,1,2)\n",
+    "    )\n",
+    ")\n",
+    "pp.pprint(iou_results)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Frame Buffer 0': {'Division Recall': 0.8085106382978723,\n",
-       "  'Division Precision': 0.7169811320754716,\n",
-       "  'Division F1': 0.76,\n",
-       "  'Mitotic Branching Correctness': 0.6129032258064516,\n",
-       "  'Total GT Divisions': 94,\n",
-       "  'True Positive Divisions': 76,\n",
-       "  'False Positive Divisions': 30,\n",
-       "  'False Negative Divisions': 18},\n",
-       " 'Frame Buffer 1': {'Division Recall': 0.8085106382978723,\n",
-       "  'Division Precision': 0.7169811320754716,\n",
-       "  'Division F1': 0.76,\n",
-       "  'Mitotic Branching Correctness': 0.6129032258064516,\n",
-       "  'Total GT Divisions': 94,\n",
-       "  'True Positive Divisions': 76,\n",
-       "  'False Positive Divisions': 30,\n",
-       "  'False Negative Divisions': 18},\n",
-       " 'Frame Buffer 2': {'Division Recall': 0.8085106382978723,\n",
-       "  'Division Precision': 0.7169811320754716,\n",
-       "  'Division F1': 0.76,\n",
-       "  'Mitotic Branching Correctness': 0.6129032258064516,\n",
-       "  'Total GT Divisions': 94,\n",
-       "  'True Positive Divisions': 76,\n",
-       "  'False Positive Divisions': 30,\n",
-       "  'False Negative Divisions': 18}}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "results['DivisionMetrics'].results"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
