--- a/examples/ctc.ipynb
+++ b/examples/ctc.ipynb
@@ -55,7 +55,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fluo-N2DL-HeLa.zip: 191MB [00:16, 11.4MB/s]                               \n"
+      "Fluo-N2DL-HeLa.zip: 191MB [00:18, 10.2MB/s]                              \n"
      ]
     }
    ],
@@ -88,15 +88,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading TIFFs: 100%|██████████| 92/92 [00:00<00:00, 359.41it/s]\n",
-      "Loading TIFFs: 100%|██████████| 92/92 [00:00<00:00, 689.41it/s]\n"
+      "Loading TIFFs: 100%|██████████| 92/92 [00:00<00:00, 374.71it/s]\n",
+      "Loading TIFFs: 100%|██████████| 92/92 [00:00<00:00, 824.06it/s]\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "gt_data = load_ctc_data('downloads/Fluo-N2DL-HeLa/01_GT/TRA', 'man_track.txt')\n",
-    "pred_data = load_ctc_data('sample-data/Fluo-N2DL-HeLa/01_RES', 'res_track.txt')"
+    "gt_data = load_ctc_data('downloads/Fluo-N2DL-HeLa/01_GT/TRA', 'downloads/Fluo-N2DL-HeLa/01_GT/TRA/man_track.txt')\n",
+    "pred_data = load_ctc_data('sample-data/Fluo-N2DL-HeLa/01_RES', 'sample-data/Fluo-N2DL-HeLa/01_RES/res_track.txt')"
    ]
   },
   {
@@ -116,9 +116,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matching frames: 100%|██████████| 92/92 [00:14<00:00,  6.33it/s]\n",
-      "Evaluating nodes: 100%|██████████| 92/92 [00:00<00:00, 9961.17it/s]\n",
-      "Evaluating edges: 100%|██████████| 8535/8535 [00:06<00:00, 1360.61it/s]\n"
+      "Matching frames: 100%|██████████| 92/92 [00:13<00:00,  6.65it/s]\n",
+      "Evaluating nodes: 100%|██████████| 92/92 [00:00<00:00, 10573.68it/s]\n",
+      "Evaluating edges: 100%|██████████| 8535/8535 [00:06<00:00, 1359.15it/s]\n"
      ]
     },
     {
@@ -233,13 +233,6 @@
     ")\n",
     "pp.pprint(iou_results)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
