--- a/examples/ctc.ipynb
+++ b/examples/ctc.ipynb
@@ -103,8 +103,14 @@
    ],
    "source": [
     "\n",
-    "gt_data = load_ctc_data('downloads/Fluo-N2DL-HeLa/01_GT/TRA', 'downloads/Fluo-N2DL-HeLa/01_GT/TRA/man_track.txt')\n",
-    "pred_data = load_ctc_data('sample-data/Fluo-N2DL-HeLa/01_RES', 'sample-data/Fluo-N2DL-HeLa/01_RES/res_track.txt')"
+    "gt_data = load_ctc_data(\n",
+    "    'downloads/Fluo-N2DL-HeLa/01_GT/TRA',\n",
+    "    'downloads/Fluo-N2DL-HeLa/01_GT/TRA/man_track.txt'\n",
+    ")\n",
+    "pred_data = load_ctc_data(\n",
+    "    'sample-data/Fluo-N2DL-HeLa/01_RES', \n",
+    "    'sample-data/Fluo-N2DL-HeLa/01_RES/res_track.txt'\n",
+    ")"
    ]
   },
   {
