Modify py file names to prefix private modules with _

--- a/examples/ctc.ipynb
+++ b/examples/ctc.ipynb
@@ -23,7 +23,7 @@
     "from tqdm import tqdm\n",
     "\n",
     "from traccuracy import run_metrics\n",
-    "from traccuracy.loaders.ctc import load_ctc_data\n",
+    "from traccuracy.loaders import load_ctc_data\n",
     "from traccuracy.matchers import CTCMatched, IOUMatched\n",
     "from traccuracy.metrics import CTCMetrics, DivisionMetrics\n",
     "\n",
