--- a/examples/ctc.ipynb
+++ b/examples/ctc.ipynb
@@ -51,29 +51,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading Fluo-N2DL-HeLa data from the CTC website\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Fluo-N2DL-HeLa.zip: 0.00B [00:00, ?B/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Fluo-N2DL-HeLa.zip: 191MB [00:15, 12.1MB/s]                               \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Add a utility to make a progress bar when downloading the file\n",
     "class DownloadProgressBar(tqdm):\n",
@@ -103,8 +81,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading TIFFs: 100%|██████████| 92/92 [00:00<00:00, 388.26it/s]\n",
-      "Loading TIFFs: 100%|██████████| 92/92 [00:00<00:00, 640.22it/s]\n"
+      "Loading TIFFs:   0%|          | 0/92 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading TIFFs: 100%|██████████| 92/92 [00:00<00:00, 402.71it/s]\n",
+      "Loading TIFFs: 100%|██████████| 92/92 [00:00<00:00, 609.62it/s]\n"
      ]
     }
    ],
@@ -112,11 +97,13 @@
     "\n",
     "gt_data = load_ctc_data(\n",
     "    'downloads/Fluo-N2DL-HeLa/01_GT/TRA',\n",
-    "    'downloads/Fluo-N2DL-HeLa/01_GT/TRA/man_track.txt'\n",
+    "    'downloads/Fluo-N2DL-HeLa/01_GT/TRA/man_track.txt',\n",
+    "    name='Hela-01_GT'\n",
     ")\n",
     "pred_data = load_ctc_data(\n",
     "    'sample-data/Fluo-N2DL-HeLa/01_RES', \n",
-    "    'sample-data/Fluo-N2DL-HeLa/01_RES/res_track.txt'\n",
+    "    'sample-data/Fluo-N2DL-HeLa/01_RES/res_track.txt',\n",
+    "    name='Hela-01_RES'\n",
     ")"
    ]
   },
@@ -137,19 +124,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matching frames: 100%|██████████| 92/92 [00:00<00:00, 93.42it/s] \n",
-      "Evaluating nodes: 100%|██████████| 8600/8600 [00:00<00:00, 721911.19it/s]\n",
-      "Evaluating FP edges: 100%|██████████| 8535/8535 [00:00<00:00, 968440.00it/s]\n",
-      "Evaluating FN edges: 100%|██████████| 8562/8562 [00:00<00:00, 1054425.71it/s]\n"
+      "Matching frames: 100%|██████████| 92/92 [00:01<00:00, 90.00it/s] \n",
+      "Evaluating nodes: 100%|██████████| 8600/8600 [00:00<00:00, 645392.99it/s]\n",
+      "Evaluating FP edges: 100%|██████████| 8535/8535 [00:00<00:00, 923996.20it/s]\n",
+      "Evaluating FN edges: 100%|██████████| 8562/8562 [00:00<00:00, 990392.47it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[   {   'metric': {   'e_weights': {'fn': 1.5, 'fp': 1, 'ws': 1},\n",
+      "[   {   'gt': 'Hela-01_GT',\n",
+      "        'matcher': {'name': 'CTCMatcher'},\n",
+      "        'metric': {   'e_weights': {'fn': 1.5, 'fp': 1, 'ws': 1},\n",
       "                      'name': 'CTCMetrics',\n",
       "                      'v_weights': {'fn': 10, 'fp': 1, 'ns': 5}},\n",
+      "        'pred': 'Hela-01_RES',\n",
       "        'results': {   'AOGM': 627.5,\n",
       "                       'DET': 0.9954855886097927,\n",
       "                       'TRA': 0.993676498745377,\n",
@@ -158,8 +148,12 @@
       "                       'fp_edges': 60,\n",
       "                       'fp_nodes': 0,\n",
       "                       'ns_nodes': 0,\n",
-      "                       'ws_edges': 47}},\n",
-      "    {   'metric': {'frame_buffer': (0, 1, 2), 'name': 'DivisionMetrics'},\n",
+      "                       'ws_edges': 47},\n",
+      "        'version': '0.0.3.dev5+gf8c982c'},\n",
+      "    {   'gt': 'Hela-01_GT',\n",
+      "        'matcher': {'name': 'CTCMatcher'},\n",
+      "        'metric': {'frame_buffer': (0, 1, 2), 'name': 'DivisionMetrics'},\n",
+      "        'pred': 'Hela-01_RES',\n",
       "        'results': {   'Frame Buffer 0': {   'Division F1': 0.76,\n",
       "                                             'Division Precision': 0.7169811320754716,\n",
       "                                             'Division Recall': 0.8085106382978723,\n",
@@ -180,7 +174,8 @@
       "                                             'False Negative Divisions': 18,\n",
       "                                             'False Positive Divisions': 30,\n",
       "                                             'Mitotic Branching Correctness': 0.6129032258064516,\n",
-      "                                             'True Positive Divisions': 76}}}]\n"
+      "                                             'True Positive Divisions': 76}},\n",
+      "        'version': '0.0.3.dev5+gf8c982c'}]\n"
      ]
     }
    ],
@@ -204,21 +199,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matching frames: 100%|██████████| 92/92 [00:15<00:00,  6.03it/s]\n"
+      "Matching frames: 100%|██████████| 92/92 [00:15<00:00,  6.01it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[   {   'metric': {'frame_buffer': (0, 1, 2), 'name': 'DivisionMetrics'},\n",
+      "[   {   'gt': 'Hela-01_GT',\n",
+      "        'matcher': {'iou_threshold': 0.1, 'name': 'IOUMatcher'},\n",
+      "        'metric': {'frame_buffer': (0, 1, 2), 'name': 'DivisionMetrics'},\n",
+      "        'pred': 'Hela-01_RES',\n",
       "        'results': {   'Frame Buffer 0': {   'Division F1': 0.711340206185567,\n",
       "                                             'Division Precision': 0.69,\n",
       "                                             'Division Recall': 0.7340425531914894,\n",
@@ -239,7 +237,8 @@
       "                                             'False Negative Divisions': 25,\n",
       "                                             'False Positive Divisions': 31,\n",
       "                                             'Mitotic Branching Correctness': 0.552,\n",
-      "                                             'True Positive Divisions': 69}}}]\n"
+      "                                             'True Positive Divisions': 69}},\n",
+      "        'version': '0.0.3.dev5+gf8c982c'}]\n"
      ]
     }
    ],
