Correct notebook header levels

--- a/examples/test-cases.ipynb
+++ b/examples/test-cases.ipynb
@@ -300,7 +300,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Division Cases"
+    "## Division Cases"
    ]
   },
   {
@@ -407,7 +407,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Shifted Division Cases"
+    "## Shifted Division Cases"
    ]
   },
   {
