Correct notebook header levels

--- a/examples/test-cases.ipynb
+++ b/examples/test-cases.ipynb
@@ -372,7 +372,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Division Cases"
+    "## Division Cases"
    ]
   },
   {
@@ -479,7 +479,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Shifted Division Cases"
+    "## Shifted Division Cases"
    ]
   },
   {
